# ftrs-directory-of-services

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  .releaserc.json  .tool-versions  .valeignore  APPCONFIG_SETUP_SUMMARY.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  release.config.js  report.html  trivy.yaml
sandbox/dos-ingest-sandbox/: Dockerfile  pyproject.toml
sandbox/dos-ingest-sandbox/src/app/: main.py
sandbox/dos-ingest-sandbox/src/router/: responses.py  routes.py
sandbox/dos-search/: .dockerignore  README.md  pyproject.toml
sandbox/dos-search/scripts/: smoke.sh
sandbox/dos-search/src/app/: main.py
sandbox/dos-search/src/router/: responses.py  routes.py
scripts/workflow/tests/open_search_index/: README.md  conftest.py  helpers.py  pyproject.toml  test_common_open_search.py  test_create_index.py  test_end_to_end_no_aws.py  test_open_search.py  test_populate_deserialise_and_scan.py  test_populate_helpers.py  test_populate_index.py
services/crud-apis/: .coveragerc  Makefile  README.md  handler_main.py  powertools_correlation_id.py  pyproject.toml
services/crud-apis/dos_ingest/: app.py  dependencies.py  handler.py  logging.py
services/crud-apis/dos_ingest/models/: healthcare_service.py  organisation.py
services/crud-apis/dos_ingest/router/: healthcare.py  location.py  organisation.py
services/crud-apis/dos_ingest/service/: org_validators.py  organisation_service.py  validators.py
services/crud-apis/healthcare_service/: README.md  default.env  hcserver.py  local.py
services/crud-apis/healthcare_service/app/: config.py  handler_healthcare_service.py  main.py
services/crud-apis/healthcare_service/tests/: test_config.py  test_db_service.py  (+4 more)
services/crud-apis/location/: README.md  local.py
services/crud-apis/locations/: README.md
services/crud-apis/mock/: handler_mock.py
services/crud-apis/organisations/: README.md  app.py  dependencies.py  lambda_handler.py  local.py  models.py  settings.py  validators.py
services/crud-apis/tests/: __init__.py  conftest.py
services/crud-apis/utils/: config.py  db_service.py
services/data-migration/: .env.local  .env_example  FTRS-1369_Test_Results.md  Makefile  README.md  docker-compose.yml  manual_test_FTRS-1369.sql  pyproject.toml
services/data-migration/errors/: errors.py
services/data-migration/events/: README.md  queue-populator-full-sync.json  queue-populator-single-service.json  reference-data-load-triagecode.json  version-history-stream-event-document.json
services/data-migration/local-opensearch-config/: README.md  data-prepper-config.yaml  index-template.json  pipelines.yaml
services/data-migration/pipeline/: application.py  cleardown.py  cli.py  clinical_codes.py  common.py  constants.py  db_utils.py  dms_db.py  dms_db_lambda_handler.py  exceptions.py  extract.py  lambda_handler.py  load.py  migration_copy_db_trigger.py  migration_copy_db_trigger_lambda_handler.py  processor.py  queue_populator.py  recordlevel.py  reset.py  schema.py  transform.py  triagecode_processor.py  trigger.sql.tmpl  validators.py
services/data-migration/schema/: target-state.sql
services/data-migration/scripts/: test_version_history_local.py
services/data-migration/tests/: conftest.py
services/etl-ods/: Makefile  README.md  cli.py  conftest.py  processor.py  pyproject.toml
services/etl-ods/common/: apim_client.py  auth.py  error_handling.py  exceptions.py  extract.py  http_client.py  message_utils.py  ods_client.py  secrets.py  sqs_processor.py  sqs_request_context.py  sqs_sender.py  url_config.py  url_utils.py  utils.py
services/etl-ods/consumer/: apim_client.py  consumer.py  consumer_handler.py  request_context.py
services/etl-ods/extractor/: extract.py  extractor.py  ods_client.py  utils.py
services/etl-ods/pipeline/: cli.py  consumer.py  extract.py  extractor.py  lambda_handler.py  load_data.py  processor.py  sqs_sender.py  transform.py  transformer.py  utilities.py  validation.py  validators.py
services/etl-ods/producer/: extract.py  load_data.py  ods_client.py  processor.py  processor_handler.py  utils.py
services/etl-ods/tests/: conftest.py
services/etl-ods/transformer/: transform.py  transformer.py  uuid_fetcher.py
services/gp-search/: .env.sample  .tool-versions  Makefile  README.md  pyproject.toml
services/gp-search/.github/: README.md
services/gp-search/application/: config.py  handler.py  test.py
services/gp-search/functions/: config.py  error_util.py  gp_search_function.py  json_schemas.py  organization_query_params.py
services/gp-search/health_check/: config.py  health_check_function.py
services/gp-search/tests/: README.md  conftest.py  manual_test.py  test.py
services/sandbox-dos-ingest/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/sandbox-dos-ingest/scripts/: smoke.sh
services/sandbox-dos-search/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
services/sandbox-dos-search/scripts/: push.sh  smoke.sh
services/slack-notifier/: .env.sample  Makefile  README.md  __init__.py  pyproject.toml  slack_alarm_handler.py
services/slack-notifier/functions/: __init__.py  alarm_parser.py  alarm_tags.py  aws_url_builder.py  logger.py  slack_alarm_handler.py  slack_client.py  slack_formatter.py
services/slack-notifier/tests/: __init__.py
tests/coverage/: Makefile  pyproject.toml
tests/service_automation/: .env  .env.dev  .env.sample  .tool-versions  Makefile  README.MD  README.md  pyproject.toml  pytest.ini  requirements.txt
tests/service_automation/allure_results/: 02233377-f7c6-4d6f-8751-15042e412754-attachment.txt  0c6bc1ce-9ece-476f-a49a-61f5f69e2d76-result.json  2396d748-e8c0-4bae-9e11-00011c38e81b-attachment.txt  4f125608-df9a-435b-89ca-f8c36045ec36-result.json  a4d95ed2-7dd9-42d8-8ad8-bf1761da16d4-attachment.csv  b56c325b-6281-499f-b3a8-aa554d14ab19-attachment.txt  c595ec48-f259-41b6-b30c-7b5e5755a20f-attachment.txt
tests/service_automation/tests/: config.py  config.yaml  config_template.yaml  conftest.py  data_migration_fixtures.py
(+2646 files in other folders)
