[project]
name = "crud-apis"
version = "0.1.0"
description = ""
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.120.2,<0.121.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "boto3-stubs[dynamodb] (>=1.38.3,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aws-lambda-powertools (>=3.11.0,<4.0.0)",
    "email-validator (>=2.1.0,<3.0.0)",
    "fhir-resources (>=8.0.0,<9.0.0)",
    "numpy (>=1.26.4,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.5.1"
ruff = "^0.9.6"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ftrs-python-packages = {path = "../../application/packages/python", develop = true}
uvicorn = "^0.34.2"
boto3 = "^1.37.33"
poethepoet = "^0.34.0"
numpy = "^1.26.4"
pytest-asyncio = "^1.1.0"

[tool.poetry.scripts]
start-organisations-api = "organisations.local:run"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
packages = [
  { include = "organisations" },
  { include = "healthcare_service" },
  { include = "location" }
]

[tool.poe.tasks]
start-healthcare-api = "uvicorn healthcare_service.app.handler_healthcare_service:app --host 0.0.0.0 --port 8002 --reload"
start-organisations-api = "uvicorn organisations.app.handler_organisation:app --host 0.0.0.0 --port 8001 --reload"
start-location-api = "uvicorn location.app.handler_location:app --host 0.0.0.0 --port 6000 --reload"
start-all-apis = "uvicorn handler_main:app --host 0.0.0.0 --port 9000 --reload"


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=organisations --cov=healthcare_service --cov=location --cov-report=term-missing --cov-fail-under=80 --cov-branch --cov-context=test"
testpaths = ["tests"]
