[project]
name = "crud-apis"
version = "0.1.0"
description = ""
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.128.7,<0.129.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "boto3-stubs[dynamodb] (>=1.38.3,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aws-lambda-powertools (>=3.11.0,<4.0.0)",
    "fhir-resources (>=8.0.0,<9.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
freezegun = "^1.5.1"
uvicorn = "^0.34.2"
boto3 = "^1.37.33"
poethepoet = "^0.34.0"
numpy = "^1.26.4"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
packages = [
  { include = "organisations" },
  { include = "healthcare_service" },
  { include = "location" }
]

[tool.poe.tasks]
start-healthcare-api = "uvicorn healthcare_service.app.handler_healthcare_service:app --host 0.0.0.0 --port 8002 --reload"
start-organisations-api = "uvicorn organisations.app.handler_organisation:app --host 0.0.0.0 --port 8001 --reload"
start-location-api = "uvicorn location.app.handler_location:app --host 0.0.0.0 --port 6000 --reload"
start-all-apis = "uvicorn handler_main:app --host 0.0.0.0 --port 9000 --reload"
test-unit = "pytest -m 'not integration' --no-cov"
test-integration = "pytest -m integration tests/integration/ --no-cov"
test-all = "pytest"
