[project]
name = "pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "boto3-stubs[dynamodb,s3,sqs] (>=1.38.1,<2.0.0)",
    "aws-lambda-powertools (>=3.11.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pycountry (>=24.6.1)",
    "chevron (>=0.14.0,<0.15.0)",
    "deepdiff (>=8.6.1,<9.0.0)",
    "ftrs-python-packages",
]

[tool.uv.sources]
ftrs-python-packages = {workspace = true}

[project.scripts]
dos-etl = "cli.main:typer_app"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pandas>=2.2.2",
    "freezegun>=1.5.1",
    "boto3>=1.37.33",
    "awswrangler>=3.11.0",
    "pytest-asyncio>=1.1.0",
    "typer>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB"]
ignore = [
  "TRY003", # Avoid specifying long exception names inside of exception
  "TRY300" , # Use else block after try block
  "PLR0913" # Too many arguments (6/5)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=80 --cov-branch --cov-context=test"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = [
    "src/common",
    "src/seeding",
    "src/dms_provisioner",
    "src/record_change_trigger",
    "src/reference_data_load",
    "src/service_migration",
    "src/queue_populator",
    "src/version_history",
    "src/cli",
]
