[project]
name = "etl_ods"
version = "0.1.0"
description = ""
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "aws-lambda-powertools (>=3.12.0,<3.13.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "PyJWT[crypto] (>=2.8.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
typer = "^0.15.2"
requests = "^2.32.3"
boto3 = "^1.38.6"
numpy = "^1.26.4"
boto3-stubs = {extras = ["dynamodb", "s3", "secretsmanager", "sqs"], version = "^1.42.45"}
pytest-mock = "^3.15.1"
requests-mock = "^1.12.1"
rsa = "^4.9.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=producer --cov=consumer --cov=common --cov-report=term-missing --cov-fail-under=80 --cov-branch --cov-context=test"
testpaths = ["tests"]
