[project]
name = "etl-ods"
version = "0.1.0"
description = ""
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "aws-lambda-powertools (>=3.13.0,<4.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "PyJWT[crypto] (>=2.8.0,<3.0.0)",
    "ftrs-python-packages",
]

[tool.uv]
package = false

[tool.uv.sources]
ftrs-python-packages = {workspace = true}

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "typer>=0.15.2",
    "requests>=2.32.3",
    "boto3>=1.38.6",
    "numpy>=1.26.4",
    "boto3-stubs[dynamodb,s3,sqs]>=1.41.1",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
    "rsa>=4.9.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=producer --cov=consumer --cov=common --cov-report=term-missing --cov-fail-under=80 --cov-branch --cov-context=test"
testpaths = ["tests"]
