[project]

name = "dos-ingest-sandbox"
version = "0.1.0"
description = "Sandbox stub service for DoS ingest API"

authors = [
{name = "NHS England"}
]

requires-python = ">=3.12,<4.0.0"

dependencies = [
  "fastapi (>=0.120.2,<0.121.0)",
  "uvicorn (>=0.34.2,<0.35.0)"
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "uvicorn>=0.34.2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB", "PT"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN", "PLR2004", "PLR0913", "PLR0915", "PLR0912", "PLR0911", "C901", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
testpaths = "tests"
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
]
