[project]

name = "dos-search-sandbox"
version = "0.1.0"
description = "Sandbox stub service for DoS search API"

authors = [
{name = "NHS England"}
]

readme = "README.md"
requires-python = ">=3.12,<4.0.0"

dependencies = [
  "fastapi (>=0.120.2,<1.0.0)",
  "uvicorn (>=0.34.2,<0.35.0)",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB", "PT"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN", "PLR2004", "PLR0913", "PLR0915", "PLR0912", "PLR0911", "C901", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
testpaths = "tests"
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--cov-branch",
    "--cov-context=test"
]
