[tool.poetry]
name = "slack-notifier"
version = "1.0.0"
description = "Slack notification service for AWS CloudWatch alarms"
authors = ["NHS England"]
readme = "README.md"
packages = [{include = "functions"}, {include = "slack_alarm_handler.py"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
slack-notifier = "slack_alarm_handler:lambda_handler"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=xml --cov-report=term-missing"
