[project]
name = "slack-notifier"
version = "0.1.0"
description = "Slack notification service for AWS CloudWatch alarms"
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aws-lambda-powertools (>=3.12.0,<3.13.0)",
    "urllib3 (>=2.0.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "functions" }
]

[tool.poetry.group.shared.dependencies]
ftrs-python-packages = {path = "../../application/packages/python", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"
boto3 = "^1.35.0"

[tool.poetry.scripts]
slack-notifier = "functions.slack_alarm_handler:lambda_handler"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "LOG", "PL", "TRY", "FURB", "PT"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN", "PLR2004", "PLR0913", "PLR0915", "PLR0912", "PLR0911", "C901", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = [
    "-v",
    "--cov=functions",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--cov-branch",
    "--cov-context=test"
]
