[project]
name = "coverage"
version = "0.1.0"

requires-python = ">=3.12,<4.0.0"
dependencies = [
    # "pydantic (>=2.10.6,<3.0.0)",
    # "fastapi (>=0.115.12,<0.116.0)",
    # "mangum (>=0.19.0,<0.20.0)",
    # "boto3-stubs[dynamodb] (>=1.38.3,<2.0.0)",
    # "pydantic-settings (>=2.9.1,<3.0.0)"
]

# [tool.coverage.combine]
# command_line = "combine"

# [tool.coverage.report]
# include = ["python_coverage_demo/*.py"]
# show_missing = true

# [tool.poetry]
# package-mode = false

[tool.poetry]
packages = []
package-mode = false


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"

