[project]
name = "service-test-automation"
version = "0.1.0"
description = "Service Test Automation Framework using pytest-bdd and Playwright"
authors = [
    {name = "NHS England"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "allure-pytest>=2.13.5",
    "allure-pytest-bdd>=2.13.5",
    "boto3>=1.37.6",
    "jsonschema>=4.17.0",
    "loguru>=0.6.0",
    "openapi-spec-validator>=0.7.1",
    "playwright>=1.50.0",
    "pytest>=8.3.4",
    "pytest-bdd>=8.1.0",
    "pytest-html>=4.1.1",
    "pytest-metadata>=3.1.1",
    "pytest-playwright>=0.7.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "tests"}]

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["dynamodb"], version = "^1.38.6"}

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-p no:allure_pytest_bdd -p no:allure_pytest"
log_level = "INFO"
bdd_features_base_dir = "tests/features/"
markers = [
    "ui: mark test as UI test",
    "is-api: mark test as IS API test",
    "is-infra: mark test as IS infra test",
    "is-pipeline: mark test to be run in the IS pipeline",
    "is-lambda: marks test as IS lambda related",
    "is-s3: marks test as IS S3 related",
    "gp_search-api: marks test as gp search related",
    "test: marks test as generic test",
]
filterwarnings = [
    'ignore:.*datetime.datetime.utcnow*',
]
