[project]
name = "service-test-automation"
version = "0.1.0"
description = "Service Test Automation Framework using pytest-bdd and Playwright"
authors = [{ name = "NHS England" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "tests" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-p no:allure_pytest_bdd -p no:allure_pytest"
log_level = "INFO"
bdd_features_base_dir = "tests/features/"
markers = [
  "ui: mark test as UI test",
  "is-api: mark test as IS API test",
  "is-apim: mark test as IS API test using the APIM proxy",
  "is-infra: mark test as IS infra test",
  "is-lambda: marks test as IS lambda related",
  "is-s3: marks test as IS S3 related",
  "dos-search-ods-code-api: marks test as gp search related",
  "test: marks test as generic test",
  "data-repo: marks test as data repository test",
  "crud-org-api: marks test as CRUD API for endpoint Organization test",
  "crud-healthcare-service-api: marks test as CRUD API for endpoint HealthcareService test",
  "crud-location-api: marks test as CRUD API for endpoint Location test",
  "test-db-fixture: marks test as using the test db fixture",
  "apim-test: marks test as APIM related",
  "etl-ods: marks test as ETL ODS related",
  "ftrs-pipeline: marks test to be run in the FTRS pipeline",
  "data-migration: marks test as data migration related",
  "transactional-writes: marks test as state table transactional writes related",
  "insert-operation: marks test as insert operation related",
  "update-operation: marks test as update operation related",
  "skip-existing: marks test as skip existing records related",
  "state-table-structure: marks test as state table structure validation related",
  "conflict-detection: marks test as conflict detection related",
  "organisation-exists: marks test as organisation exists conflict related",
  "location-exists: marks test as location exists conflict related",
  "healthcare-service-exists: marks test as healthcare service exists conflict related",
  "incremental-update: marks test as incremental update (data changes between migrations) related",
  "manual: marks test as manual test",
  "test-db-load-schema-data-migration: marks test as using the test db fixture with schema and data migration from source database",
  "rds_schema_modification: marks test as using RDS schema modification",
  "local: marks test as local-only test (runs against LocalStack)",
  "crud_apis_integration: marks test as CRUD APIs integration test",
  "crud_apis_local_comprehensive: marks test as comprehensive CRUD APIs local test",
  "aws-smoke: marks test as AWS smoke test (infrastructure verification only)",
]
filterwarnings = ['ignore:.*datetime.datetime.utcnow*']
