[project]
name = "workflow-open-search-index-tests"
version = "0.0.0"
description = "Local test environment for workflow OpenSearch index scripts"
requires-python = ">=3.12,<3.13"
dependencies = [
  "boto3>=1.37.24,<2.0.0",
  "requests>=2.31.0,<3.0.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["."]
addopts = [
  "-q",
]
